force-app/main/default/objects/Assigned_Step__c/Assigned_Step__c.object-meta.xml
<CustomObject>
    <label>Assigned Step</label>
    <nameField>
        <displayFormat>AS-{000}</displayFormat>
        <label>Assigned Step ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>