force-app/main/default/objects/Assigned_Step__c/fields/OnBoarding_Step__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OnBoarding Step</label>
    <referenceTo>OnBoarding_Step__c</referenceTo>
    <relationshipLabel>Assigned Steps</relationshipLabel>
    <relationshipName>Assigned_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>