force-app/main/default/objects/Assigned_Step__c/fields/Task_DeadLine__c.field-meta.xml
<CustomField>
    <fullName>Task_DeadLine__c</fullName>
    <label>Task DeadLine</label>
    <type>DateTime</type>
</CustomField>